<resources>
    <string name="app_name">MedPlus Admin</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log_out">Log Out</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="medicines">Medicines</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="support_help"><![CDATA[Support & Help]]></string>
    <string name="add_medicine">Add Medicine</string>
    <string name="add_category">Add Category</string>
    <string name="shopkeepers">Shopkeepers</string>
    <string name="save">Save</string>
</resources>