<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group android:checkableBehavior="none">
        <item
            android:id = "@+id/home"
            android:title = "@string/home"
            android:icon="@drawable/homeicon"/>
        <item
            android:id = "@+id/catNavItem"
            android:title = "@string/categories"
            android:icon="@drawable/categoryicon"/>
        <item
            android:id = "@+id/mediNavItem"
            android:title = "@string/medicines"
            android:icon="@drawable/medicineicon"/>
        <item
            android:id = "@+id/dashNavItem"
            android:title = "@string/dashboard"
            android:icon="@drawable/dashboardicon"/>
        <item android:title="About Us ">
            <menu>
                <item
                    android:id = "@+id/support"
                    android:title = "@string/support_help"
                    android:icon="@drawable/help"/>
            </menu>
        </item>
    </group>
</menu>